Support for open JDK 21 by updating dependencies and reflection