@@ -10,7 +10,7 @@ buildscript {
         classpath 'com.google.gradle:osdetector-gradle-plugin:1.7.3'
         classpath 'com.github.johnrengelman:shadow:8.1.1'
         classpath 'org.springframework.boot:spring-boot-gradle-plugin:2.6.3'
-        classpath 'com.gradle:gradle-enterprise-gradle-plugin:3.12.4' // added for windows build verification-metadata.xml error
+        classpath 'com.gradle:gradle-enterprise-gradle-plugin:3.16.1' // added for windows build verification-metadata.xml error
     }
 }
 
@@ -31,7 +31,7 @@ configure(subprojects) {
     apply plugin: 'jacoco-report-aggregation'
     apply plugin: 'checkstyle'
 
-    sourceCompatibility = JavaVersion.VERSION_11
+    sourceCompatibility = JavaVersion.VERSION_21
 
     ext { // in alphabetical order
         bcVersion = '1.63'
@@ -47,8 +47,8 @@ configure(subprojects) {
         fontawesomefxMaterialdesignfontVersion = '2.0.26-9.1.2'
         grpcVersion = '1.42.1'
         gsonVersion = '2.8.5'
-        guavaVersion = '30.1.1-jre'
-        guiceVersion = '5.1.0'
+        guavaVersion = '32.1.1-jre'
+        guiceVersion = '7.0.0'
         moneroJavaVersion = '0.8.10'
         httpclient5Version = '5.0'
         hamcrestVersion = '2.2'
@@ -56,7 +56,7 @@ configure(subprojects) {
         httpcoreVersion = '4.4.13'
         ioVersion = '2.6'
         jacksonVersion = '2.12.1'
-        javafxVersion = '16'
+        javafxVersion = '21.0.2'
         javaxAnnotationVersion = '1.2'
         jcsvVersion = '1.4.0'
         jetbrainsAnnotationsVersion = '13.0'
@@ -69,8 +69,8 @@ configure(subprojects) {
         langVersion = '3.11'
         logbackVersion = '1.1.11'
         loggingVersion = '1.2'
-        lombokVersion = '1.18.24'
-        mockitoVersion = '5.2.0'
+        lombokVersion = '1.18.30'
+        mockitoVersion = '5.10.0'
         netlayerVersion = '6797461310f077bbea4f43a3a509c077b0ed8c34' // Netlayer version 0.7.3 with Tor browser version 11.0.14 and tor binary version: 0.4.7.7
         protobufVersion = '3.19.1'
         protocVersion = protobufVersion
@@ -174,7 +174,11 @@ configure([project(':cli'),
             if (applicationName == 'desktop') {
                 def script = file("${rootProject.projectDir}/haveno-$applicationName")
                 script.text = script.text.replace(
-                    'DEFAULT_JVM_OPTS=""', 'DEFAULT_JVM_OPTS="-XX:MaxRAM=4g"')
+                'DEFAULT_JVM_OPTS=""', 'DEFAULT_JVM_OPTS="-XX:MaxRAM=4g ' +
+                    '--add-opens=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED ' +
+                    '--add-opens=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED ' +
+                    '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED ' +
+                    '--add-opens=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED"')
             }
 
             if (applicationName == 'apitest') {
